--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CINEPERRIS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
-<!--CINE-->
-<!--carrusel-->
-<!--boton de comprar entrada -->
-<!--imagenes de la pelicula-->
-<!--footer-->
-    
+    <!--CINE-->
+    <!--navegador-->
+    <div class="container mt-3 mb-3">
+        <div class="row">
+            <div class="col-md-4">
+                <select name="" class="form-control" id="propiedad">
+                    <option value="todos">Todos las películas</option>
+                    <option value="nombre">Nombre</option>
+                    <option value="marca">Género</option>
+                    <option value="precio">Formato</option>
+                </select>
+            </div>
+            <div class="col-md-5">
+                <input type="text" name="buscador" id="buscador" class="form-control" placeholder="Busca la pelicula">
+
+            </div>
+            <div class="col-md-3">
+                <button onclick="funcionFiltrar()" class="btn btn-danger">Buscar</button>
+            </div>
+        </div>
+        <!--carrusel-->
+        <!--boton de comprar entrada -->
+        <!--imagenes de la pelicula-->
+        <!--footer-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </body>
+
 </html>
