cambios y actualizacion colipi y ñanco

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,21 +13,17 @@
 </head>
 
 <body>
-<!--CINE-->
-<!--carrusel-->
-<!--boton de comprar entrada -->
-<button id="comprar">COMPRAR ENTRADAS</button>
-<button id="cancelar"></button>
-<button id="imprimir">IMPRIMI TICKETS AQUI</button>
-<!--boton de cancelar-->
-<!--imagenes de la pelicula-->
-
     <!--CINE-->
-    <!--carrusel-->
     <!--boton de comprar entrada -->
+    <button id="comprar">COMPRAR ENTRADAS</button>
+    <button id="cancelar"></button>
+    <button id="imprimir">IMPRIMI TICKETS AQUI</button>
+    <!--boton de cancelar-->
+    <!--imagenes de la pelicula-->
+    
     <!--card de la pelicula-->
     <div id="contenedor1"></div>
-   
+
     <script src="cine.js"></script>
 
     <!--footer-->
