footer echo y terminado por colipi

--- a/index.html
+++ b/index.html
@@ -44,6 +44,51 @@
         <script src="cine.js"></script>
 
         <!--footer-->
+        <footer class="row row-cols-5 py-5 my-5 border-top">
+    <div class="col">
+      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <p class="text-muted">Copyright © 2025 Cineperris</p>
+    </div>
+
+    <div class="col">
+
+    </div>
+
+    <div class="col">
+      <h5>CINES</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Neuquèn</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">El cuy</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cipolletti</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Chichinales</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Avellaneda</a></li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <h5>Contactos</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Telefono: 299123789</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Email: cinelosperris@yahoo.com.ar</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Instagram: @cineperris.ar</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Twitter: cineperris_ar</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook: cineperris.ar</a></li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <h5>ACUERDOS</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Cualquier objeto extraviado/robado/perdido el cine no se harà responsable de dicha perdida.</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">En caso de caerse con los pochoclos no habra devoluciòn.</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">En caso de corte de luz la pelicula no se reanudara y no se reembolsara el dinero.</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">En caso de tener alguna pelea adentro del establecimiento, la persona responsable deberà abonar los daños tanto fisicos como mental hacia nuestros trabajadores. </a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Desde ya muchas gracias.</a></li>
+      </ul>
+    </div>
+  </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
             crossorigin="anonymous"></script>
