el filtro ya funcionaaaa

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <button id="imprimir">IMPRIMI TICKETS AQUI</button>
         <!--boton de cancelar-->
         <!--imagenes de la pelicula-->
+        <h2>Filtro</h2>
+        <div id="contenedor"></div>
 
         <!--card de la pelicula-->
+        <h2>Cartelera</h2>
         <div id="contenedor1"></div>
 
         <script src="cine.js"></script>
