--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <select name="" class="form-control" id="propiedad">
                     <option value="todos">Todos las películas</option>
                     <option value="nombre">Nombre</option>
-                    <option value="marca">Género</option>
-                    <option value="precio">Formato</option>
+                    <option value="genero">Género</option>
+                    <option value="Formato">Formato</option>
                 </select>
             </div>
             <div class="col-md-5">
